# oauth2_server

./: .gitignore  README.md  todo.md
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ff22cfe6d80_initial_migration.py  bea5b2e1e7b9_seed_data.py
backend/src/: database.py  main.py  models.py  oauth.py  routes.py
backend/src/auth/: security.py  service.py
backend/tests/: test_basic.py
client/: main.py  pyproject.toml
frontend/: README.md  components.json  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/components/ui/button/: button.svelte  index.ts
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
frontend/src/lib/components/ui/checkbox/: checkbox.svelte  index.ts
frontend/src/lib/components/ui/input/: index.ts  input.svelte
frontend/src/lib/components/ui/label/: index.ts  label.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/callback/: +page.svelte
frontend/src/routes/consent/: +page.svelte
frontend/src/routes/login/: +page.svelte
