[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioauth>=2.0.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "itsdangerous>=2.2.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
